# csi-driver

./: .gitignore  .golangci.yaml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSES  Makefile  OWNERS  README.md  RELEASE.md  SECURITY.md  WORKSPACE  entrypoint.sh  go.mod  go.sum  klone.yaml  main.go
.github/chainguard/: make-self-upgrade.sts.yaml  renovate.sts.yaml
.github/workflows/: govulncheck.yaml  make-self-upgrade.yaml  release.yaml  renovate.yaml
cmd/: BUILD.bazel  main.go  start.go
cmd/app/: BUILD.bazel  app.go  app_test.go  start.go
cmd/app/options/: BUILD.bazel  options.go
cmd/options/: options.go
deploy/: cert-manager-csi-driver.yaml
deploy/charts/csi/: Chart.yaml  README.md  values.yaml
deploy/charts/csi-driver/: Chart.yaml  README.md  values.linter.exceptions  values.schema.json  values.yaml
deploy/charts/csi-driver/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd-klone.yaml  csidriver.yaml  daemonset.yaml  podmonitor.yaml  serviceaccount.yaml
deploy/charts/csi-driver/tests/: securitycontext_test.yaml
deploy/charts/csi/templates/: clusterrole.yaml  clusterrolebinding.yaml  csidriver.yaml  daemonset.yaml  serviceaccount.yaml
deploy/example/: example-app.yaml
docs/design/: 20190914.certificaterenewal.md
hack/: BUILD.bazel  update-bazel.sh  update-deps-licenses.sh  update-deps.sh  update-helm-docs.sh  verify-helm-docs.sh  verify_boilerplate.py
hack/boilerplate/: boilerplate.py
hack/tools/: go.mod  go.sum  tools.go
internal/metrics/: metrics.go
internal/pkg/keystore/pkcs12/: pkcs12.go  pkcs12_test.go
internal/version/: version.go
make/: 00_mod.mk  02_mod.mk  test-e2e.mk  test-unit.mk  verify-pod-security-standards-exceptions.yaml
make/_shared/cert-manager/: 00_mod.mk
make/_shared/controller-gen/: 01_mod.mk
make/_shared/generate-verify/: 00_mod.mk  01_mod.mk  02_mod.mk
make/_shared/go/: 01_mod.mk
make/_shared/helm/: crds.mk  deploy.mk  helm.mk
make/_shared/help/: 01_mod.mk  help.sh
make/_shared/kind/: 00_mod.mk  kind-image-preload.mk  kind.mk
make/_shared/oci-build/: 00_mod.mk
make/_shared/oci-build/image_tool/: append_layers.go  go.mod  go.sum
make/_shared/oci-image/: 01_mod.mk
make/_shared/oci-image/image_tool/: go.mod  go.sum  main.go
make/_shared/oci-publish/: 01_mod.mk
make/_shared/repository-base/base/: Makefile
make/_shared/repository-base/base/.github/workflows/: make-self-upgrade.yaml
make/_shared/tools/: 00_mod.mk
make/_shared/tools/util/: checkhash.sh
pkg/apis/: doc.go
pkg/apis/defaults/: BUILD.bazel  defaults.go  defaults_test.go
pkg/apis/templating/: templating.go
pkg/apis/v1alpha1/: BUILD.bazel  attribute.go  types.go  volume.go
pkg/apis/validation/: BUILD.bazel  validation.go  validation_test.go
pkg/certmanager/: BUILD.bazel  certmanager.go  renew.go
pkg/client/: client.go
pkg/driver/: BUILD.bazel  certmanager.go  certmanager_test.go  controllerserver.go  driver.go  identityserver.go  nodeserver.go  nodeserver_test.go  renew.go  server.go
pkg/filestore/: writer.go  writer_test.go
pkg/keygen/: keygen.go
pkg/keystore/pkcs12/: pkcs12.go  pkcs12_test.go
pkg/readinessgate/: readinessgate.go  readinessgate_test.go
pkg/registrar/: registrar.go
pkg/renew/: BUILD.bazel  renew.go  renew_test.go
pkg/requestgen/: generator.go  generator_test.go
pkg/util/: BUILD.bazel  csr.go  key.go  map.go  metadata.go  mount.go  parse.go  strings.go
pkg/webhook/: webhook.go
pkg/webhook/net/: net.go
test/: run.sh
test/e2e/environment/: environment.go
test/e2e/environment/dev/: dev.go
test/e2e/framework/: cleanup.go  framework.go  testenv.go  util.go
test/e2e/framework/config/: config.go  ginkgo.go
test/e2e/framework/helper/: certificaterequest.go  helper.go  host.go  kubectl.go  local.go  pod.go  spec.go
test/e2e/framework/log/: log.go
test/e2e/framework/testdata/: testdata.go
test/e2e/framework/util/: util.go
test/e2e/suite/: main.go  suite.go  suite_test.go
test/e2e/suite/cases/: annotations.go  cases.go  fsgroup.go  keyencoding.go  metrics.go  pkcs12.go  renew.go  stress.go  template.go  templating.go  usages.go  util.go  variables.go
test/e2e/suite/cases/testdata/: testdata.go
test/e2e/suite/util/: util.go
test/e2e/util/: csr.go  csr_test.go  metadata.go  parse.go  strings.go
test/kind/: cert-manager.go  csi.go  kind.go
test/unit/: cert.go
