# gazelle:prefix github.com/joshvanl/cert-manager-csi
# gazelle:proto disable_global

load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

# export WORKSPACE so workspace_binary rules can be used outside the root
exports_files([
    "WORKSPACE",
    "LICENSE",
    "LICENSES",
    "go.mod",
    "go.sum",
])

container_bundle(
    name = "images",
    images = {
        "{STABLE_DOCKER_REPO}/cert-manager-csi:{STABLE_DOCKER_TAG}": "//cmd/app:image",
    },
)

docker_push(
    name = "images.push",
    bundle = ":images",
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"], exclude=["bazel-*/**", ".git/**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd:all-srcs",
        "//hack:all-srcs",
        "//pkg/apis/defaults:all-srcs",
        "//pkg/apis/v1alpha1:all-srcs",
        "//pkg/apis/validation:all-srcs",
        "//pkg/certmanager:all-srcs",
        "//pkg/driver:all-srcs",
        "//pkg/renew:all-srcs",
        "//pkg/util:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
