load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//hack/build:docker.bzl", "image")

image(
    name = "image",
    binary = ":cert-manager-csi",
    component = "cert-manager-csi",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/joshvanl/cert-manager-csi/cmd",
    visibility = ["//visibility:private"],
    deps = ["//cmd/app:go_default_library"],
)

go_binary(
    name = "cert-manager-csi",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/app:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
