package(default_visibility = ["//visibility:public"])

GO = "@go_sdk//:bin/go"

GOROOT = "@go_sdk//:files"

GAZELLE = "@bazel_gazelle//cmd/gazelle"

KAZEL = "@io_k8s_repo_infra//cmd/kazel"

JQ = "@com_github_jetstack_cert_manager_csi//hack/bin:jq"

sh_binary(
    name = "update-bazel",
    srcs = ["update-bazel.sh"],
    args = [
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
    ],
    data = [
        GAZELLE,
        KAZEL,
    ],
)

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % GAZELLE,
        "$(location %s)" % KAZEL,
        "$(location %s)" % JQ,
        "$(location :update-bazel)",
        "$(location :update-deps-licenses)",
    ],
    data = [
        GAZELLE,
        GO,
        KAZEL,
        JQ,
        ":update-bazel",
        ":update-deps-licenses",
    ],
)

sh_binary(
    name = "update-deps-licenses",
    srcs = ["update-deps-licenses.sh"],
    args = [
        "$(location %s)" % GO,
        "$(location %s)" % JQ,
    ],
    data = [
        GO,
        JQ,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//hack/bin:all-srcs",
        "//hack/build:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
