load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["certmanager.go"],
    importpath = "github.com/joshvanl/cert-manager-csi/pkg/certmanager",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/v1alpha1:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_jetstack_cert_manager//pkg/apis/certmanager/v1alpha2:go_default_library",
        "@com_github_jetstack_cert_manager//pkg/apis/meta/v1:go_default_library",
        "@com_github_jetstack_cert_manager//pkg/client/clientset/versioned:go_default_library",
        "@com_github_jetstack_cert_manager//pkg/util/pki:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
