load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "controllerserver.go",
        "driver.go",
        "identityserver.go",
        "nodeserver.go",
        "server.go",
    ],
    importpath = "github.com/jetstack/cert-manager-csi/pkg/driver",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["nodeserver_test.go"],
    embed = [":go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
